<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Multipeer" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsO-3j-Wox">
                                <rect key="frame" x="236" y="130" width="67" height="30"/>
                                <color key="backgroundColor" red="0.67450980390000004" green="0.2666666667" blue="0.68627450980000004" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="KcK-w6-8oP"/>
                                    <constraint firstAttribute="width" constant="67" id="Rk8-nV-vAY"/>
                                </constraints>
                                <state key="normal" title="JOIN">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="joinWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JzJ-6Z-6IJ"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pjz-pt-FLc">
                                <rect key="frame" x="63" y="203" width="240" height="272"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="272" id="U81-h5-wvs"/>
                                    <constraint firstAttribute="width" constant="240" id="dou-V3-CVX"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IkV-RH-H4e">
                                <rect key="frame" x="63" y="547" width="240" height="69"/>
                                <color key="backgroundColor" red="0.34901960780000002" green="0.60392156860000001" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="69" id="dSK-LZ-f2C"/>
                                    <constraint firstAttribute="width" constant="240" id="mAP-vP-yGe"/>
                                </constraints>
                                <state key="normal" title="SEND">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="sendImage" destination="BYZ-38-t0r" eventType="touchUpInside" id="wK7-9S-wfQ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBS-Qy-SEO">
                                <rect key="frame" x="72" y="130" width="63" height="30"/>
                                <color key="backgroundColor" red="0.91372549020000005" green="0.20000000000000001" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="3zZ-nd-jvn"/>
                                    <constraint firstAttribute="width" constant="63" id="l9f-hy-L3k"/>
                                </constraints>
                                <state key="normal" title="HOST">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="hostWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ng-tr-2I8"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="vsO-3j-Wox" firstAttribute="leading" secondItem="BBS-Qy-SEO" secondAttribute="trailing" constant="101" id="0Eu-BM-T7A"/>
                            <constraint firstItem="vsO-3j-Wox" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="110" id="3tP-GT-cOx"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IkV-RH-H4e" secondAttribute="bottom" constant="51" id="9lM-jW-nQV"/>
                            <constraint firstItem="pjz-pt-FLc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="63" id="HDk-lQ-1f9"/>
                            <constraint firstItem="IkV-RH-H4e" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="63" id="Np1-GM-JzK"/>
                            <constraint firstItem="BBS-Qy-SEO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="110" id="Se5-tk-nP9"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pjz-pt-FLc" secondAttribute="bottom" constant="192" id="XmN-Ba-nKp"/>
                            <constraint firstItem="BBS-Qy-SEO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="72" id="gnG-rc-Ee5"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="imageView" destination="pjz-pt-FLc" id="nem-4b-cLP"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
        </scene>
    </scenes>
</document>
